#1954 Get the marker icon added to the Gazetteer hub data card

--- a/config/interface/hub/data.yml
+++ b/config/interface/hub/data.yml
@@ -182,6 +182,8 @@ Supporting:
       - GeographicArea
       - Georeference
       - CollectingEvent
+    categories:
+      - collecting_event
   GeneAttribute:
     status: :prototype
     related_models:
