--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -357,7 +357,7 @@ unify_people_task:
   description: 'Find and merge identical/duplicate people removing redundancy.'
 observation_matrix_view_task:
   hub: true
-  name: 'View an observation matrix'
+  name: 'View observation matrix'
   related:
   categories:
     - matrix
@@ -975,3 +975,13 @@ new_filename_depicting_image_task:
     - collection_object
   status: prototype
   description: "Upload images assigning them as depictions of CollectionObjects based on the identifier in the filename. You shouldn't really be using this as a day-to-day workflow, there are better approaches."
+image_matrix_task:
+  hub: false
+  name: 'Image matrix'
+  related:
+    - observation_matrices
+  categories:
+    - matrix
+  status: prototype
+  description: "Visualize and add images in a matrix context."
+
