#1954 Change name of the new/edit GZ task
It's a little confusing to have 'New Gazetteer' appear in the navigator radial and then have it take you to edit instead.

--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -960,13 +960,13 @@ filter_dwc_occurrences_task:
   description: 'Filter records in the DarwinCore index.'
 new_gazetteer_task:
   hub: true
-  name: 'New Gazetteer'
+  name: 'Create or edit Gazetteers'
   related:
   categories:
     - collecting_event
     - new
   status: prototype
-  description: 'Create named shapes for use in your project.'
+  description: 'Create or edit named shapes for use in your project.'
 import_gazetteers_task:
   hub: true
   name: 'Import Gazetteers'
