--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@fontsource/ibm-plex-sans": "^5.1.0",
     "@geoman-io/leaflet-geoman-free": "^2.17.0",
-    "@ibm/plex": "^6.4.1",
     "@json2csv/plainjs": "^7.0.6",
     "@json2csv/transforms": "^7.0.6",
     "@sfgrp/encase": "^0.1.2",
@@ -13,7 +13,7 @@
     "@sfgrp/svg-radial-menu": "^1.0.9",
     "@viz-js/viz": "^3.9.0",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.5",
     "d3": "^7.9.0",
     "dompurify": "^3.1.7",
     "easymde": "^2.18.0",
@@ -22,11 +22,11 @@
     "leaflet.pattern": "^0.1.0",
     "marked": "^14.1.3",
     "parse-dms": "0.0.5",
-    "three": "^0.169.0",
     "pdfjs-dist": "4.7.76",
     "pinia": "^2.2.4",
     "qs": "^6.13.0",
     "shakapacker": "8.0.2",
+    "three": "^0.169.0",
     "v-network-graph": "^0.9.17",
     "vue": "^3.5.12",
     "vue-handy-scroll": "^3.0.2",
@@ -65,7 +65,7 @@
     "postcss-preset-env": "^10.0.7",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.79.5",
+    "sass": "^1.80.2",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
