--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -135,6 +135,7 @@ Lead:
   tasks:
     - show_lead_task
     - leads_hub_task
+    - print_key_task
   new: new_lead_task
   edit: new_lead_task
 Loan:
