--- a/config/interface/hub/data.yml
+++ b/config/interface/hub/data.yml
@@ -210,6 +210,7 @@ Supporting:
     hide: true
     related_models:
       - GeographicArea
+      - Gazetteer
       - Georeference
       - CollectingEvent
   Image:
