--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -469,7 +469,7 @@ filter_collection_objects_task:
     - filters
   status: prototype
   description: 'Filter collection objects by many different facets, download or visualize results.'
-syncronize_otus_to_nomenclature_task:
+synchronize_otus_to_nomenclature_task:
   hub: true
   name: 'Synchronize nomenclature and OTUs'
   related:
@@ -919,7 +919,7 @@ field_synchronize_task:
   related:
   categories:
   status: prototype
-  description: 'Batch edit or syncronize the values in one or two fields or data-attribute'
+  description: 'Batch edit or synchronize the values in one or two fields or data-attribute'
 collecting_events_spatial_summary_task:
   hub: false
   name: 'Collecting Event Spatial Summary'
