--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -999,3 +999,10 @@ print_key_task:
   categories:
   status: prototype
   description: 'Format a key for print.'
+summarize_projects_controlled_vocabulary_terms_task:
+  hub: true
+  name: 'Controlled vocabulary across projects'
+  related:
+  categories:
+  status: prototype
+  description: 'Visualize controlled vocabulary terms across the projects you are a member of.'
