Add browse source scaffold #244

--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -1006,3 +1006,10 @@ summarize_projects_controlled_vocabulary_terms_task:
   categories:
   status: prototype
   description: 'Visualize controlled vocabulary terms across the projects you are a member of.'
+browse_sounds_task:
+  hub: true
+  name: 'Browse sounds'
+  related:
+  categories:
+  status: prototype
+  description: 'TODO: Task description'
