--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -6,7 +6,7 @@ RUN apt-get update && \
     apt-get install -y locales \
                        libgtk-3-0 libgtk-3-dev libdbus-glib-1-2 libxt6 libasound2t64 && \
     curl -sL 'https://download.mozilla.org/?product=firefox-latest&lang=en-US&os=linux64' | \
-    tar -xjf - -C /usr/bin && \
+    tar -xJf - -C /usr/bin && \
     /usr/bin/firefox/firefox --version && \
     apt clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
