--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -1006,10 +1006,9 @@ summarize_projects_controlled_vocabulary_terms_task:
   categories:
   status: prototype
   description: 'Visualize controlled vocabulary terms across the projects you are a member of.'
-
 index_multi_update_task:
-  hub: true
-  name: 'TODO: Task name'
+  hub: false
+  name: 'Multi-update data attributes'
   related:
   categories:
   status: prototype
