--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
       run: |
         sudo sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
         sudo apt-get update
-        sudo apt-get install -y tesseract-ocr libgeos-dev libproj-dev
+        sudo apt-get install -y tesseract-ocr libgeos-dev libproj-dev build-essential
 
     - name: Change ownership of /usr/src to runner user to allow cache to be restored
       run: sudo chown $(id -u) /usr/src
