--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,10 @@ jobs:
       RAILS_ENV: test
       CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
 
-    runs-on: ubuntu-24.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-24.04]
         worker: [0, 1, 2, 3]
 
     services:
@@ -64,7 +65,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('.ruby-version', '**/Gemfile', '**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
+        key: ${{ runner.os }}-${{ matrix.os }}-gems-${{ hashFiles('.ruby-version', '**/Gemfile', '**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
 
     - name: Set up Node 22 LTS
       uses: actions/setup-node@v4
@@ -77,7 +78,7 @@ jobs:
         path: |
           ~/.npm
           **/node_modules
-        key: ${{ runner.os }}-node-22-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-${{ matrix.os }}-node-22-${{ hashFiles('**/package-lock.json') }}
 
     - name: Set up assets cache
       uses: actions/cache@v4
@@ -113,7 +114,7 @@ jobs:
           /usr/src/libheif-*
           /usr/src/libde265-*
           /usr/src/ImageMagick-7*
-        key: ${{ runner.os }}-imagemagick-${{ hashFiles('**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
+        key: ${{ runner.os }}-${{ matrix.os }}-imagemagick-${{ hashFiles('**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
 
     - name: Change ownership of /usr/src back to root
       run: |
