--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -105,6 +105,7 @@ Extract:
     recent: true
 FieldOccurrence:
   tasks:
+    - browse_field_occurrence_task
     - new_field_occurrence_task
     - unify_objects_task
   edit: new_field_occurrence_task
