Update tasks description

--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -1012,7 +1012,7 @@ browse_field_occurrence_task:
   related:
   categories:
   status: prototype
-  description: 'TODO: Task description'
+  description: 'Report everything known about a field occurrence. Includes determinations, images, collecting event, biological associations, etc.'
 index_multi_update_task:
   hub: false
   name: 'Multi-update data attributes'
@@ -1026,4 +1026,4 @@ filter_field_occurrences_task:
   related:
   categories:
   status: prototype
-  description: 'TODO: Task description'
+  description: 'Filter field occurrences by many different facets, download or visualize results.'
